# octo-gha-tools

./: .gitignore  README.md
.github/reusable-templates/: dependabot.yml
docs/: security-remediation-rollup-spec.md
security-remediation-agent/: main.py  pyproject.toml
security-remediation-agent/src/agents/: remediation_planner_agent.py  vulnerability_collector_agent.py  vulnerability_triage_agent.py
security-remediation-agent/src/models/: remediation_plan.py  remediation_plan_bundle.py  security_findings.py  security_package_triage.py  sync_placeholder_tracking_pr.py
security-remediation-agent/src/orchestrator/: security_orchestrator.py
security-remediation-agent/src/tools/: github_rollup_planner.py
security-remediation-agent/src/tools/github_codescanning_collector/: codescanning_alerts_tool.py
security-remediation-agent/src/tools/github_codescanning_collector/model/: codescanning_alert.py
security-remediation-agent/src/tools/github_pr_collector/: pull_requests_tool.py
security-remediation-agent/src/tools/github_pr_collector/model/: pull_request_metadata.py
security-remediation-agent/src/tools/github_pr_collector/utils/: version_bump_resolver.py
security-remediation-agent/src/tools/github_sbom_analyzer/: sbom_analysis_tool.py
security-remediation-agent/src/tools/github_vulnerability_collector/: dependabot_alerts_tool.py
security-remediation-agent/src/tools/github_vulnerability_collector/model/: vulnerability_alert.py
security-remediation-agent/src/tools/remediation_planning_assistant/: remediation_planning_tool.py
security-remediation-agent/tests/: test_codescanning_alerts_tool.py  test_dependabot_alerts_tool.py  test_github_rollup_planner.py  test_pull_requests_tool.py  test_remediation_planning_tool.py
(+13 files in other folders)
